hphp/hack/test/typecheck/variadic_args2.php
<?hh // partial

function f(...$args = varray[]): void {}
